--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,9 +1,16 @@
-<h1>Restaurants</h1>
+<div class='container'>
+  <div class='row justify-content-center'>
+    <div class='col-md-8'>
 
-<ul>
-  <% @restaurants.each do |restaurant| %>
-    <li><%= link_to restaurant.name, restaurant_path(restaurant) %></li>
-    <%= link_to "Delete", restaurant, method: :delete, remote: true %>
-  <% end %>
-</ul>
+      <h1>Restaurants</h1>
 
+      <ul>
+        <% @restaurants.each do |restaurant| %>
+          <li><h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2></li>
+          <%= link_to "Delete", restaurant, method: :delete, remote: true %>
+        <% end %>
+      </ul>
+
+    </div>
+  </div>
+</div>
